--- a/ansible/playbooks/00_base.yaml
+++ b/ansible/playbooks/00_base.yaml
@@ -8,6 +8,7 @@
     - apt: upgrade=dist
     - apt: name={{ item }} state=present
       with_items:
+        - percona-toolkit
         - apache2-utils
         - psmisc
         - net-tools
@@ -18,6 +19,7 @@
         - neovim
         - direnv
 
+# percona-toolkit: pt-query-digestのため(mysqlのスロークエリの分析ツール)
 # apache2-utils: abのため
 # psmisc: pstreeのため
 # net-tools: ifconfigのため
