[env] .env.sampleにnewrelicのキーを追加

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,10 @@
+# AWSに立てる場合
 AWS_ACCOUNT_ID=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=ap-northeast-1
 AWS_DEFAULT_REGION=ap-northeast-1
+
+# newrelicを導入する場合
+NEWRELIC_USER_KEY=
+NEWRELIC_LICENSE_KEY=
