--- a/private-isu/files/03-isucon.conf
+++ b/private-isu/files/03-isucon.conf
@@ -7,7 +7,8 @@ server {
   # /isucon/ 以下はNginxレイヤでキャッシュがあれば返す
   # なければアプリケーションサーバにフォワード(流す)
   location /image/ {
-    root /home/isucon/private_isu/webapp/public/; expires 1d;
+    root /home/isucon/private_isu/webapp/public/;
+    expires 1d;
     try_files $uri @app;
   }
   location @app {
