--- a/private-isu-aws-tf/cloud-init-benchmarker.yaml
+++ b/private-isu-aws-tf/cloud-init-benchmarker.yaml
@@ -2,6 +2,8 @@
 
 timezone: Asia/Tokyo
 package_update: true
+hostname: private-isu-benchmarker
+preserve_hostname: true
 packages:
   - ansible
   - curl
