nginxのhttp_stub_status_moduleの設定

--- a/private-isu/files/04-isucon.conf
+++ b/private-isu/files/04-isucon.conf
@@ -10,6 +10,11 @@ server {
     expires 1d;
   }
 
+  location /status {
+    stub_status on;
+    access_log off;
+  }
+
   location /image/ {
     root /home/isucon/private_isu/webapp/public/;
     expires 1d;
