--- a/private-isu/files/03-isucon.conf
+++ b/private-isu/files/03-isucon.conf
@@ -10,6 +10,11 @@ server {
     expires 1d;
   }
 
+  location /status {
+    stub_status on;
+    access_log off;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://127.0.0.1:8080;
