nginxにヘルスチェック用のエンドポイントを生やす

--- a/private-isu/files/04-isucon.conf
+++ b/private-isu/files/04-isucon.conf
@@ -15,6 +15,12 @@ server {
     access_log off;
   }
 
+  location /nginx-healthcheck {
+    access_log off;
+    add_header Content-Type application/json;
+    return 200 '{"message": "OK"}';
+  }
+
   location /image/ {
     root /home/isucon/private_isu/webapp/public/;
     expires 1d;
