--- a/private-isu/files/03-isucon.conf
+++ b/private-isu/files/03-isucon.conf
@@ -15,6 +15,12 @@ server {
     access_log off;
   }
 
+  location /nginx-healthcheck {
+    access_log off;
+    add_header Content-Type application/json;
+    return 200 '{"message": "OK"}';
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://127.0.0.1:8080;
